--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- About Section -->
     <section id="about" class="text-center py-10">
         <h2 class="text-3xl font-semibold">About Me</h2>
-        <p class="max-w-2xl mx-auto mt-4">I am a final-year CSE student at Daffodil International University with skills in web development and machine learning.</p>
+        <p class="max-w-2xl mx-auto mt-4">I am a final-year CSE student at Daffodil International University with skills in web development and machine learning. Passionate about solving real-world problems through technology, I specialize in full-stack development and artificial intelligence. I enjoy working on innovative projects and continuously expanding my knowledge in modern web frameworks and machine learning algorithms.</p>
     </section>
 
     <!-- Skills Section -->
@@ -55,24 +55,24 @@
     <!-- Projects Section -->
     <section id="projects" class="text-center py-10">
         <h2 class="text-3xl font-semibold">Projects</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-6 max-w-4xl mx-auto">
+        <div class="grid grid-cols-1 md-grid-cols-2 gap-6 mt-6 max-w-4xl mx-auto">
             <div class="p-4 bg-gray-800 rounded">
                 <h3 class="text-xl font-semibold">Bus Ticket Sell Online System</h3>
                 <p class="text-gray-400">A platform to purchase bus tickets easily.</p>
-                <a href="#" class="text-blue-400 underline">Live Demo</a>
-                <a href="#" class="text-blue-400 underline ml-4">GitHub</a>
+                <a href="https://mdtanvirbd.github.io/Assignment-5/" class="text-blue-400 underline">Live Demo</a>
+                <a href="https://github.com/mdtanvirbd/Assignment-5" class="text-blue-400 underline ml-4">GitHub</a>
             </div>
             <div class="p-4 bg-gray-800 rounded">
                 <h3 class="text-xl font-semibold">Restaurant Menu Card System</h3>
                 <p class="text-gray-400">A digital menu card system with ordering features.</p>
-                <a href="#" class="text-blue-400 underline">Live Demo</a>
-                <a href="#" class="text-blue-400 underline ml-4">GitHub</a>
+                <a href="https://mdtanvirbd.github.io/Manue-card/" class="text-blue-400 underline">Live Demo</a>
+                <a href="https://github.com/mdtanvirbd/Manue-card" class="text-blue-400 underline ml-4">GitHub</a>
             </div>
             <div class="p-4 bg-gray-800 rounded">
                 <h3 class="text-xl font-semibold">Responsive Portfolio</h3>
                 <p class="text-gray-400">A personal portfolio website built with HTML, CSS, and Daisy UI.</p>
-                <a href="#" class="text-blue-400 underline">Live Demo</a>
-                <a href="#" class="text-blue-400 underline ml-4">GitHub</a>
+                <a href="https://mdtanvirbd.github.io/tanvir-portfolio/" class="text-blue-400 underline">Live Demo</a>
+                <a href="https://github.com/mdtanvirbd/tanvir-portfolio" class="text-blue-400 underline ml-4">GitHub</a>
             </div>
         </div>
     </section>
@@ -80,12 +80,12 @@
     <!-- Contact Section -->
     <section id="contact" class="text-center py-10 bg-gray-800">
         <h2 class="text-3xl font-semibold">Contact Me</h2>
-        <p class="mt-2">Email: tanvirhossain@example.com</p>
+        <p class="mt-2">Email: youaretanvirhossain@gmail.com</p>
         <p>LinkedIn: linkedin.com/in/md-tanvir-hossain</p>
-        <form class="mt-4 max-w-md mx-auto">
-            <input type="text" placeholder="Your Name" class="w-full p-2 mb-2 border rounded text-black">
-            <input type="email" placeholder="Your Email" class="w-full p-2 mb-2 border rounded text-black">
-            <textarea placeholder="Your Message" class="w-full p-2 mb-2 border rounded text-black"></textarea>
+        <form class="mt-4 max-w-md mx-auto" action="https://formsubmit.co/youaretanvirhossain@gmail.com" method="POST">
+            <input type="text" name="name" placeholder="Your Name" class="w-full p-2 mb-2 border rounded text-black" required>
+            <input type="email" name="email" placeholder="Your Email" class="w-full p-2 mb-2 border rounded text-black" required>
+            <textarea name="message" placeholder="Your Message" class="w-full p-2 mb-2 border rounded text-black" required></textarea>
             <button type="submit" class="px-4 py-2 bg-blue-500 text-white rounded">Send</button>
         </form>
     </section>
